[gd_scene load_steps=15 format=2]

[ext_resource path="res://asset/font/LXGWWenKai-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://asset/font/LXGWWenKai-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://asset/image/ui/Image 140.png" type="Texture" id=3]
[ext_resource path="res://asset/image/npc/Image 150.jpg" type="Texture" id=4]
[ext_resource path="res://asset/image/ui/Image 154.png" type="Texture" id=5]
[ext_resource path="res://asset/image/ui/Image 152.png" type="Texture" id=6]
[ext_resource path="res://asset/image/ui/Image 156.png" type="Texture" id=7]
[ext_resource path="res://asset/image/ui/Image 158.png" type="Texture" id=8]
[ext_resource path="res://asset/image/ui/Image 160.png" type="Texture" id=9]
[ext_resource path="res://src/autoload/Dialog.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[node name="Dialog" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="Dialog_left" type="TextureRect" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -240.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar" type="Sprite" parent="Dialog_left"]
position = Vector2( 86.0951, 97.7503 )
scale = Vector2( 1.63016, 1.60993 )
texture = ExtResource( 4 )

[node name="Name" type="Label" parent="Dialog_left"]
margin_left = 163.898
margin_top = 13.449
margin_right = 391.898
margin_bottom = 69.449
custom_fonts/font = SubResource( 1 )
text = "姓名"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Dialog_left"]
position = Vector2( 908.707, 193.59 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="Content" type="RichTextLabel" parent="Dialog_left"]
margin_left = 167.0
margin_top = 75.0
margin_right = 936.0
margin_bottom = 216.0
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[color=blue][url={\"data\"=\"1\"}]选项1[/url][/color]"
text = "选项1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScBox" type="ScrollContainer" parent="Dialog_left"]
margin_left = 167.0
margin_top = 75.0
margin_right = 936.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Dialog_left/ScBox"]
margin_right = 769.0
size_flags_horizontal = 3

[node name="Dialog_right" type="TextureRect" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -240.0
texture = ExtResource( 3 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar" type="Sprite" parent="Dialog_right"]
position = Vector2( 873.988, 97.2657 )
scale = Vector2( 1.62957, 1.592 )
texture = ExtResource( 4 )

[node name="Name" type="Label" parent="Dialog_right"]
margin_left = 558.518
margin_top = 8.95515
margin_right = 793.519
margin_bottom = 68.9551
custom_fonts/font = SubResource( 1 )
text = "姓名"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Dialog_right"]
position = Vector2( 773.778, 197.86 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="Content" type="RichTextLabel" parent="Dialog_right"]
margin_left = 24.0
margin_top = 75.0
margin_right = 793.0
margin_bottom = 216.0
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "测试[b]测试[/b]123456789"
text = "测试测试123456789"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScBox" type="ScrollContainer" parent="Dialog_right"]
margin_left = 24.0
margin_top = 75.0
margin_right = 793.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Dialog_right/ScBox"]
margin_right = 769.0
size_flags_horizontal = 3

[node name="ClickTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
